security changes, result persisted and bug fixes